Fix credit card form on small screens (close #97)

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -2137,6 +2137,11 @@ h3.rent-title {
 .date-input fieldset:nth-child(3) {
   width: 45%;
   }
+  
+.credit-card {
+	max-width: 100%;
+	margin: 20px auto;
+	}
 
 
 // Buttons
